--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/maker-bundle": "^1.55",
         "symfony/runtime": "6.4.*",
         "symfony/twig-bundle": "6.4.*",
+        "symfony/webpack-encore-bundle": "^2.1",
         "symfony/yaml": "6.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
