--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/framework-bundle": "6.4.*",
         "symfony/maker-bundle": "^1.55",
         "symfony/runtime": "6.4.*",
+        "symfony/security-bundle": "6.4.*",
         "symfony/twig-bundle": "6.4.*",
         "symfony/webpack-encore-bundle": "^2.1",
         "symfony/yaml": "6.4.*",
